# mitm-proxy

./: .gitignore  README.md  pyproject.toml
src/mitm_proxy/: __init__.py  cli.py  proxy.py  storage.py  tcp_proxy.py
tests/: conftest.py  test_tcp_proxy.py  test_tcp_proxy_behavior.py  test_tcp_proxy_interim.py
