[project]
name = "mitm-proxy"
version = "0.1.0"
description = "Streaming HTTP forwarding proxy that captures request/response status, headers, and bodies to disk for later querying."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10",
    "aiosqlite>=0.20",
    "aiofiles>=24.1.0",
    "click>=8.1",
]

[project.scripts]
mitm-proxy = "mitm_proxy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitm_proxy"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
